--- a/packages/_styles/common/color.scss
+++ b/packages/_styles/common/color.scss
@@ -1,6 +1,7 @@
-$border: #d0d0d0;
+$border: #c7c7c7;
+$borderDeep: #9d9d9d;
 
-$color: #2c2c2c;
+$color: #4d4d4d;
 $colorHover: #838383;
 $colorActive: #3b3b3b;
 $colorDisabled: #c2c2c2;
