Add(Input、Icon)

--- a/packages/_styles/common/index.scss
+++ b/packages/_styles/common/index.scss
@@ -1,3 +1,3 @@
-@import "./color.scss";
-@import "./size.scss";
-@import "./other.scss";
+@import "./var/index.scss";
+@import "./styles/index.scss";
+@import "./animation/index.scss";
