--- a/packages/_styles/button.scss
+++ b/packages/_styles/button.scss
@@ -126,8 +126,6 @@
   font-size: 14px;
   background: white;
   cursor: pointer;
-  margin-right: 10px;
-  margin-bottom: 10px;
   border-radius: $borderRadius;
   user-select: none;
   touch-action: manipulation;
@@ -239,6 +237,7 @@
       height: $largeHeight;
       font-size: 16px;
       padding: 8px 20px;
+      border-radius: $borderRadiusLarge;
     }
 
     &-default {
