--- a/packages/_styles/input.scss
+++ b/packages/_styles/input.scss
@@ -12,6 +12,10 @@
   width: 100%;
   font-size: 14px;
 
+  &::-webkit-input-placeholder {
+    color: $border;
+  }
+
   &:focus {
     outline: none;
   }
