--- a/lib/icon/index.css
+++ b/lib/icon/index.css
@@ -1,1 +1,1 @@
-.icon{fill:currentColor;height:1em;overflow:hidden;vertical-align:-.15em;width:1em}
+.inline-block[data-v-63696d3b]{display:inline-block}.icon[data-v-63696d3b]{fill:currentColor;height:1em;overflow:hidden;vertical-align:-.15em;width:1em}
