add(Message):新增Message

--- a/packages/_styles/common/var/color.scss
+++ b/packages/_styles/common/var/color.scss
@@ -12,6 +12,9 @@ $primaryActive: #086dda;
 $primaryDisabled: #b3d5fd;
 
 $danger: red;
+$dangerLight: #fc5656;
 $dangerHover: #ff7878;
 $dangerActive: #fd3030;
 $dangerDisabled: #fdbfbf;
+
+$warn: #eebd52;
