--- a/packages/_styles/common/index.scss
+++ b/packages/_styles/common/index.scss
@@ -1,3 +1,8 @@
 @import "./var/index.scss";
 @import "./styles/index.scss";
 @import "./animation/index.scss";
+
+body {
+  padding: 0;
+  margin: 0;
+}
