--- a/packages/_styles/message.scss
+++ b/packages/_styles/message.scss
@@ -29,9 +29,9 @@
     pointer-events: all;
     display: inline-block;
 
-    box-shadow: -1px 1px 19px 1px rgba(154,153,153,0.35);
-    -webkit-box-shadow: -1px 1px 19px 1px rgba(154,153,153,0.35);
-    -moz-box-shadow: -1px 1px 19px 1px rgba(154,153,153,0.35);
+    box-shadow: -1px 1px 19px 1px rgba(154, 153, 153, 0.35);
+    -webkit-box-shadow: -1px 1px 19px 1px rgba(154, 153, 153, 0.35);
+    -moz-box-shadow: -1px 1px 19px 1px rgba(154, 153, 153, 0.35);
 
     &-icon {
       @mixin icon {
