--- a/packages/_styles/message.scss
+++ b/packages/_styles/message.scss
@@ -20,7 +20,7 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  animation: appear $delay;
+  animation: appear .2s;
 
   &-body {
     padding: 16px 20px;
@@ -75,15 +75,14 @@
 
 @keyframes appear {
   0% {
-    top: 0;
-    opacity: 0;
+    margin-top: 0px;
   }
 
   70% {
-    opacity: 0.9;
+    margin-top: 9px;
   }
 
   100% {
-    opacity: 1;
+    margin-top: 10px;
   }
 }
