fix(Input):支持 v-model

--- a/packages/_styles/message.scss
+++ b/packages/_styles/message.scss
@@ -20,7 +20,7 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  animation: appear .2s;
+  animation: appear 0.2s;
 
   &-body {
     padding: 16px 20px;
