--- a/packages/_styles/common/var/color.scss
+++ b/packages/_styles/common/var/color.scss
@@ -1,11 +1,13 @@
 $border: #c7c7c7;
 $borderDeep: #9d9d9d;
 
+$colorLite: #c5c5c5;
 $color: #4d4d4d;
 $colorHover: #838383;
 $colorActive: #3b3b3b;
 $colorDisabled: #c2c2c2;
 
+$primaryVeryLite: #e4f2ff;
 $primary: #1d90fd;
 $primaryHover: #40a9ff;
 $primaryActive: #086dda;
