--- a/lib/space/index.css
+++ b/lib/space/index.css
@@ -1,1 +1,1 @@
-.t-space{align-items:center}.t-space-item{display:inline-block}
+.t-space{align-items:center}.t-space-item{display:inline-block;vertical-align:middle}
